[package]
name = "rust_kill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
bytes = "1"

[dev-dependencies]
rand = "0.8"