[package]
name = "rust_kill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
redis = "0.22.1"
mini-redis = "0.4"
bytes = "1"
nodejs-sys = "0.14.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
rand = "0.8"
